perf: Mejor proceso de venta
* Se muestra datos del cliente y producto cuando ingresa PK
* Se descuenta stock producto cuando genera venta
* Se muestra msg de OK cuando venta 200
* Se manda productos a la db

--- a/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
+++ b/veterinaria-solidaria-app/src/app/shared/navbar/navbar.component.html
@@ -23,7 +23,7 @@
             
             </ul>
             <span class="navbar-text float-end">
-                <button class="btn btn-danger"> <i class="fas fa-sign-out-alt"></i> Salir </button>
+                <button class="btn btn-danger" (click)="logout()"> <i class="fas fa-sign-out-alt"></i> Salir </button>
             </span>
         </div>
     </div>
